# codejam22-template

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
API definition/: analysis.md
API definition/submissions/: submission_1.h  submission_1a.h  submission_2.h  submission_2a.h  submission_3.h  submission_4.h  submission_5.md  submission_6.h  submission_7.h  submission_8.h
cmake/: conan_setup.cmake  project_options.cmake
docs/: ICD.wsd
docs/vault/: api.cost.access.md  api.cost.md  api.md  api.planner.md  api.search-space.md  api.search-space.path.md  api.search-space.state.md  api.search-space.target.md  api.vehicle.md  misc.md  needs.md  root.md  templates.api-study.md  tests.proposals.md  use-cases.md
docs/vault/assets/: proposals.cost.access.hpp  proposals.cost.hpp  proposals.planner.hpp  proposals.search.space.hpp  proposals.vehicle.hpp
example/: CMakeLists.txt  app.cpp  path_visualizer.ipynb  requirements.txt
example/config/: config.h.in
example/test/: CMakeLists.txt
lib/: CMakeLists.txt  pathplanning.cpp
lib/config/: config.h.in
lib/include/pathplanning/: common.h  cost.h  cost_provider.h  math_utils.h  path.h  pathplanning.h  planner.h  search_space.h  state.h  target.h  vehicle.h
lib/include/pathplanning/internal/: common.h
lib/include/pathplanning/targets/: path_target.h  point_target.h  polygon_target.h  radius_target.h
lib/include/units/: units.h
test/: CMakeLists.txt  core_test.cpp  cost_test.cpp
test_package/: CMakeLists.txt  conanfile.py  pkg_test.cpp
